# vidya-rust

./: .gitignore  Cargo.toml  README.md  docs.md  log_export.sh  log_export_debug.sh  log_export_info.sh
assets/maps/images/: collision.ase  debug-terrain.aseprite
assets/maps/tmx/: demo.tmx  map.tmx  map_backup.tmx  map_debug.tmx  map_old.tmx  map_simple.tmx  smallmap.tmx
assets/maps/tsx/: collision.tsx  debug-terrain.tsx  spring-forest-tree-tops.tsx  spring-forest.tsx
examples/: being_movement.rs  load_map.rs  platformer_movement.rs  sprite_animation.rs  title_screen.rs  transition.rs
src/: animation.rs  app.rs  being.rs  camera.rs  debug.rs  direction.rs  extensions.rs  game.rs  graphics.rs  lib.rs  main.rs  physics.rs  platformer.rs  player.rs  screen.rs  sprite.rs  state.rs  transition.rs  ui.rs  ui_event.rs  util.rs
src/app/: mod.rs  vidya_plugin.rs
src/app/climb/: mod.rs
src/app/wall_climb/: mod.rs
src/being/: mod.rs
src/camera/: mod.rs
src/debug/: mod.rs
src/map/: climb.rs  current_map.rs  current_map_graphics.rs  events.rs  map.rs  map_state.rs  mod.rs  tile.rs  traverse.rs  vidya_map.rs
src/map/traverse/: climb.rs  mod.rs  traverse.rs
src/physics/: collision.rs  components.rs  mod.rs  movement.rs  terrain.rs
src/physics/collision/: cuboid.rs  mod.rs  slope.rs
src/player/: mod.rs
src/resources/: mod.rs
src/transition/: fade.rs  mod.rs  transition.rs
