[package]
name = "vidya-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["dynamic"] }
tiled = { git = "https://github.com/Anti-Alias/rs-tiled.git" }
anyhow = "1.0"
anymap = "0.12.1"
dyn-clone = "1.0.8"
log = "0.4"
uuid = "0.8.2"
num_enum = "0.5.7"

[features]
# Determines if debug features should be included (Camera, extra menus, etc)
debug = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

